--- a/app/static/main.css
+++ b/app/static/main.css
@@ -925,6 +925,9 @@ table.entry_info_table{
 .chapter_toolbelt_btn:hover{
   filter: brightness(1.3);
 }
+#ch_dict_btn{
+  background: var(--toc_dictionary_btn_color);
+}
 .series_progress{
   position: unset;
   width: fit-content;
